# frametree-flywheel

./: .gitignore  README.rst  codecov.yml  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml  tests.yml
arcana/changeme/: cli.py
arcana/changeme/data/: local.py  remote.py
arcana/changeme/deploy/: app.py  command.py
arcana/changeme/deploy/tests/: test_deploy.py  test_licenses.py
arcana/flywheel/: __init__.py  cli.py
arcana/flywheel/data/: __init__.py  api.py  local.py
arcana/flywheel/data/tests/: test_store.py
arcana/flywheel/deploy/: app.py  command.py
arcana/flywheel/deploy/tests/: test_deploy.py
frametree/flywheel/: __init__.py  api.py
frametree/flywheel/tests/: test_store.py
